# personal-memory

./: .env.example  .gitignore  Dockerfile  FEISHU_QUICKSTART.md  FEISHU_SETUP.md  FEISHU_TROUBLESHOOTING.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml  pm.bat  pyproject.toml  requirements.txt  test_connection.py  test_sdk_structure.py
prompts/: parse_finance.txt  parse_goal.txt  parse_health.txt  parse_learning.txt  parse_leisure.txt  parse_social.txt  parse_work.txt
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  parser.py  providers.py
src/cli/: finance.py  goal.py  health.py  learning.py  leisure.py  report.py  social.py  work.py
src/core/: __init__.py  categories.py  database.py  exceptions.py  models.py  schemas.py
src/feishu/: __init__.py  client.py  event_handler.py  handlers.py
src/repositories/: base.py  finance_repo.py  goal_repo.py  health_repo.py  learning_repo.py  leisure_repo.py  social_repo.py  user_repo.py  work_repo.py
src/services/: record_service.py
tests/: test_config.py
